# ai-day-confluent-hackathon

./: .gitignore  README.md  deploy.py  pyproject.toml
data-gen/: generate.py  root.json  run.sh
data-gen/connections/: truck-telemetry.json
data-gen/generators/: base-telemetry.json  degrading-telemetry.json  healthy-telemetry.json
data-gen/trucks/: all-trucks.json  degrading-trucks.json  healthy-trucks.json
flink-sql/: 01_create_table.sql  02_eda_engine_temp.sql  03_engine_temp_anomalies.sql  04_multi_signal_anomalies.sql  05_at_risk_trucks.sql  06_diagnose_with_llm.sql  07_create_dispatch_agent.sql  08_run_agent.sql
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
