[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Streaming-agents predictive maintenance demo over a Confluent Cloud trucking fleet."
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "confluent-kafka[avro]>=2.5",
]

[project.scripts]
deploy = "deploy:main"
destroy = "deploy:destroy"
plan = "deploy:plan"
datagen = "deploy:datagen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["deploy.py"]
